--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <h1> Rock, Paper, Scissors</h1>
 
     <div class="playerButtons">
-        <button class="btn" id="1">Rock</button>
-        <button class="btn" id="2">Paper</button>
-        <button class="btn" id="3">Scissors</button>
+        <button class="btn" id="rock">Rock</button>
+        <button class="btn" id="paper">Paper</button>
+        <button class="btn" id="scissors">Scissors</button>
     </div>
 </body>
 </html>
