--- a/index.html
+++ b/index.html
@@ -11,10 +11,25 @@
 
     <h1> Rock, Paper, Scissors</h1>
 
+    <div class="points">
+        <div>
+            <h2>Computer: <span id="compScore"></span></h2>
+        </div>
+        <div>
+            <h2>Player: <span id="playerScore"></span></h2>
+        </div>
+    </div>
+
+    <div class="result">
+        <h2></h2>
+    </div>
+
     <div class="playerButtons">
         <button class="btn" id="rock">Rock</button>
         <button class="btn" id="paper">Paper</button>
         <button class="btn" id="scissors">Scissors</button>
     </div>
+
+    
 </body>
 </html>
