Added result window to display the resultof current round

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js" defer></script> 
+    <script src="script.js" defer></script>
 </head>
+
 <body>
 
     <h1> Rock, Paper, Scissors</h1>
@@ -20,9 +22,7 @@
         </div>
     </div>
 
-    <div class="result">
-        <h2></h2>
-    </div>
+
 
     <div class="playerButtons">
         <button class="btn" id="rock">Rock</button>
@@ -30,6 +30,11 @@
         <button class="btn" id="scissors">Scissors</button>
     </div>
 
-    
+    <div class="result">
+        <h2>Result</h2>
+        <h2><span id="result"></span></h2>
+    </div>
+
 </body>
+
 </html>
