--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
     <div class="points">
         <div>
-            <h2>Computer: <span id="compScore"></span></h2>
+            <h2>Computer: <span id="compScore">0</span></h2>
         </div>
         <div>
-            <h2>Player: <span id="playerScore"></span></h2>
+            <h2>Player: <span id="playerScore">0</span></h2>
         </div>
     </div>
 
